--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alan.selfadil.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-        <activity android:name=".admin.HomeAdminActivity"></activity>
+        android:theme="@style/Theme.MyApplication"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".pembeli.DetailBuku"></activity>
+        <activity android:name=".admin.Profile" />
+        <activity android:name=".admin.InputDataBuku" />
+        <activity android:name=".admin.EditBukuDanHapusActivity" />
+        <activity android:name=".admin.ActivityDataBuku" />
+        <activity android:name=".pembeli.HomePembeli" />
+        <activity android:name=".admin.HomeAdminActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".user.RegisterActivity" />
         <activity android:name=".user.LoginActivity">
